# python-vcf

./: .gitignore  pyproject.toml
src/python_vcf/: cli.py
src/python_vcf/rfc2426/: __init__.py  address.py  email.py  name.py  org.py  photo.py  tel.py
src/python_vcf/rfc6350/: __init__.py  gender.py  kind.py  pid.py  related.py
